# CPCA

./: README.md  pyproject.toml
.github/workflows/: pypi_publish_release.yml
src/comad/: __init__.py  decomposition.py  eval.py
src/cpca/: __init__.py  decomposition.py  eval.py  modeling.py  report.py  utils.py
