[project]
name = "cpca"
version = "0.1.0"
description = "Complementary principal component analysis (CPCA) for fMRI confound correction."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    'matplotlib==3.3.4',
    'nibabel==3.2.1',
    'nilearn==0.7.1',
    'nipype==1.6.1',
    'numpy==1.20.1',
    'pandas==1.2.4',
    'pathos==0.2.7',
    'pybids==0.16.3',
    'scikit-learn==0.24.1',
    'scipy==1.8.1',
    'seaborn==0.11.1',
    'simpleitk==2.0.2',
    'qbatch==2.3',
    'networkx<3'
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
