[project]
name = "comad"
version = "0.1.1"
description = "Complementary Matrix Decomposition (CoMaD) for spatiotemporal artefact correction."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    'matplotlib>=3.3.4',
    'numpy>=1.20.1',
    'scikit-learn>=0.24.1',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

